--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,7 +15,7 @@ env:
 jobs:
   build:
     name: "Gen ESXi-installer Customized"
-    runs-on: windows-2016
+    runs-on: windows-latest
 
     steps:
       
