--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -21,6 +21,12 @@ jobs:
       
       - name: Checkout
         uses: actions/checkout@v3.0.0
+        
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.7'
+          cache: 'pip' # caching pip dependencies
+      - run: pip install -r six psutil lxml pyopenssl
 
       - name: Config VMware.PowerCLI
         shell: pwsh
