--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,7 +25,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.7'
-      - run: pip install -r six psutil lxml pyopenssl
+          cache: pip
+      - run: pip install six psutil lxml pyopenssl
 
       - name: Config VMware.PowerCLI
         shell: pwsh
