--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -43,7 +43,6 @@ jobs:
         uses: potatoqualitee/psmodulecache@v5.2
         with:
           modules-to-cache: VMware.PowerCLI
-          updatable: true
 
       - name: Clone ECP Source Code
         shell: pwsh
@@ -72,6 +71,7 @@ jobs:
           rm ESXi-Customizer-PS.ps1 -r -fo
           echo "ISO_FILE=$PWD" >> $GITHUB_ENV
           echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+          echo "::set-output name=status::success"
 
       # - name: Upload File
       #   uses: actions/upload-artifact@main
